	default.
	(twittering-fill-string): use an additional argument `prefix' as
	`fill-prefix' for `fill-region-as-paragraph' if the argument is
	non-nil.
	(twittering-update-filled-string): transfer the local prefix for
	`twittering-fill-string'.
	(twittering-generate-formater-for-first-spec): recognize an
	optional argument for the format specifier `FILL'.

2010-05-27  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-toggle-activate-buffer): restart
	the timer if it is not active when activating a buffer.

2010-05-24  Naohiro Aota  <naota@elisp.net>

	* twittering-mode.el (twittering-native-retweet): Check if tweet
	is my own one.

2010-05-22  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Use the coding-system `utf-8-unix' for
	reading data retrieved from Twitter.
	(twittering-start-http-session-curl): use the coding-system
	`utf-8-unix' for reading data retrieved from Twitter.
	(twittering-start-http-session-native): likewise.

	* twittering-mode.el: Omit a successful HTTP response and headers
	if they seem to be sent from a proxy for CONNECT method.
	(twittering-http-default-sentinel): omit a successful HTTP
	response and headers from a proxy if using SSL via the proxy.
	(twittering-get-response-header): do not remove headers from a
	proxy.

	* twittering-mode.el: Do not initialize `twittering-tls-program'
	multiple times.
	(twittering-start-http-session-native-tls-p): check `tls-program'
	only if `twittering-tls-program' is nil.

	* twittering-mode.el: Cache the result of capability confirmation
	for `curl'.
	(twittering-start-http-session-curl-p): do not initialize
	`twittering-curl-program' multiple times.
	(twittering-start-http-session-curl-https-p): do not execute
	`curl' multiple times.

	* twittering-mode.el: Look-up of connection type is rearranged.
	(twittering-lookup-http-start-function): reimplemented.
	(twittering-lookup-connection-type): new function.

	* twittering-mode.el: Confirm an available connection method