@@ -54,6 +54,15 @@
 	(twittering-generate-formater-for-first-spec): recognize an
 	optional argument for the format specifier `FILL'.
 
+	* twittering-mode.el: Add a new format specifier
+	"%FOLD[prefix]{...}".
+	(twittering-fill-string): add an argument `keep-newline'. If it is
+	non-nil, do not remove newlines in given string.
+	(twittering-update-filled-string): add an argument
+	`keep-newline'.
+	(twittering-generate-formater-for-first-spec): add a new specifier
+	"%FOLD[prefix]{...}".
+
 2010-05-27  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el (twittering-toggle-activate-buffer): restart
